<?xml version="1.0" encoding="UTF-8"?>

<!-- 
/*===================================================================================================
 *	username_confirmation.xml
 *	
 *	Authors: Jackson Turner
 *	Supporting Contributors: Michael Allon, Richard Kenny, Josh Nimtz, Kim Pilbeam, Vincent Sam
 *	
 * 	Last Edit: 4/23/2103
 * 
 * 	Major: Defines the basic layout of the dialog box to prompt a user for his or her Compuware
 * 		LAN ID.  Two entry boxes are shown.  
 * 
 * 	Minor: 
 * 
 *  Notes: 
 *===================================================================================================
 */ -->

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    android:background="#85ccea"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/TextViewUsernameInstructions"
        android:text="@string/pref_username_summary"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="10dip"
        android:textSize="15sp"/>
  
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/EditTextUsername1"
        android:layout_marginBottom="10dp"        
        android:layout_marginLeft="10dip"
        android:hint="@string/pref_username_hint" />
     <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/TextViewUsername1"
        android:text="@string/pref_username_confirm"        
        android:layout_marginLeft="10dip"
        android:textStyle="bold" />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/EditTextUsername2"
        android:layout_marginLeft="10dip"
        android:hint="@string/pref_username_hint" 
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/TextViewUsernameProblems"
        android:textStyle="bold"
        android:layout_marginLeft="10dip"
        android:gravity="center" />
</LinearLayout>